--- a/src/content/docs/schedule/devlog-2-3.mdx
+++ b/src/content/docs/schedule/devlog-2-3.mdx
@@ -17,11 +17,11 @@ https://omundy.github.io/dig345-radical-software/tutorials/astro-starlight-examp
 Follow [Astro's Build a Blog tutorial](https://docs.astro.build/en/tutorial/0-introduction/) to create a modular website using component-based design. Compare your finished blog site to the [tutorial example](https://github.com/withastro/blog-tutorial-demo/tree/complete) as needed.
 
 
-1. Create a new Astro site and publish it on Netlify<sup>[1](https://docs.astro.build/en/tutorial/1-setup/)</sup>. Write the formatted command ✏️ here  using `backticks` so you remember it. 
+1. Create a new Astro site and publish it on Netlify<sup>[1](https://docs.astro.build/en/tutorial/1-setup/)</sup>. Write the formatted command `npm create astro@latest` here  using `backticks` so you remember it. 
 1. Create pages (`.astro` files) and blog posts (`.md` files) using frontmatter and file-based routing<sup>[2](https://docs.astro.build/en/tutorial/2-pages/)</sup>. 
 1. Use Astro [components](https://docs.astro.build/en/basics/astro-components/) (also `.astro` files!) to reuse common code across your website<sup>[3](https://docs.astro.build/en/tutorial/3-components/)</sup>. 
 1. Create reusable layout components using `<slot />` and `Astro.props` to inject child content<sup>[4](https://docs.astro.build/en/tutorial/4-layouts/)</sup>. 
-1. Create layout components for markdown files. Share anything that was difficult so far ✏️ here. 
+1. Create layout components for markdown files. Share anything that was difficult so far "I am having trouble with mostly following the steps blindly without knowing what is coming and i think astro blog to me might not be as easy and then also i think building without a visual the outcome and some concept really don't know make sense" here. 
 1. Display a dynamically generated list of posts on your Blog page<sup>[5](https://docs.astro.build/en/tutorial/5-astro-api/)</sup>. 
 1. Use Dynamic page routing with [`getStaticPaths()`](https://docs.astro.build/en/tutorial/5-astro-api/2/) to specify and store static routes during build, and pass each page its own props.
 1. Install Astro [Preact](https://preactjs.com/) integration. Use a `client:` directive for hydration on a UI framework component<sup>[6](https://docs.astro.build/en/tutorial/6-islands/1/)</sup>. 🔥 Challenge: Already have experience with a UI library? Try to [integrate](https://docs.astro.build/en/guides/integrations-guide/) that one instead! For example, I used Svelte.
