--- a/src/content/docs/schedule/devlog-2-3.mdx
+++ b/src/content/docs/schedule/devlog-2-3.mdx
@@ -25,7 +25,7 @@ Follow [Astro's Build a Blog tutorial](https://docs.astro.build/en/tutorial/0-in
 1. Display a dynamically generated list of posts on your Blog page<sup>[5](https://docs.astro.build/en/tutorial/5-astro-api/)</sup>. 
 1. Use Dynamic page routing with [`getStaticPaths()`](https://docs.astro.build/en/tutorial/5-astro-api/2/) to specify and store static routes during build, and pass each page its own props.
 1. Install Astro [Preact](https://preactjs.com/) integration. Use a `client:` directive for hydration on a UI framework component<sup>[6](https://docs.astro.build/en/tutorial/6-islands/1/)</sup>. 🔥 Challenge: Already have experience with a UI library? Try to [integrate](https://docs.astro.build/en/guides/integrations-guide/) that one instead! For example, I used Svelte.
-1. Modify your site design and content as if you were transitioning to Astro.js from an existing Wordpress site/blog. Duplicate the design, content, structure from the other site (not entirely, mind you, since this is just a mockup). Publish your blog site and put the url ✏️ here.
+1. Modify your site design and content as if you were transitioning to Astro.js from an existing Wordpress site/blog. Duplicate the design, content, structure from the other site (not entirely, mind you, since this is just a mockup). Publish your blog site and put the url https://melissa-astro-blog.netlify.app/ here.
 1. Copy and paste these instructions into `devlog-2-3.mdx` in your own [DevLog](https://github.com/omundy/dig345-devlog). Publish it. Then turn it in by posting a direct link to the page on Moodle.
 
     
