--- a/src/content/docs/schedule/devlog-4-3.mdx
+++ b/src/content/docs/schedule/devlog-4-3.mdx
@@ -1,18 +1,91 @@
+
 ---
-# Frontmatter section
-title: DevLog 1-3 
-description: DevLog 1-3
+title: Week 4 - Databases / MongoDB
+description: DIG 345 course schedule
+# draft: true
 ---
 
-{/* 
+import IconTime from "@/components/IconTime.astro";
+import YoutubeVideo from '@/components/YoutubeVideo.astro';
+import CustomAside from '@/components/CustomAside.astro';
+import DevLogInstructions from "@/components/DevLogInstructions.astro";
 
-COPY / USE THIS TEMPLATE FOR EACH WEEK 
+import Date from '@/components/Date.astro';
 
-See this page for example codes
-https://omundy.github.io/dig345-radical-software/tutorials/astro-starlight-examples/
+<Date week="4" />
 
-*/}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 4-1 Databases
+
+<CustomAside type="homework">
+
+- ✅ Finish steps 1-10 from DevLog 2-3 and post.
+
+</CustomAside>
+
+
+<CustomAside type="inclass">
+1. Instructor: Discuss relational / object DBs, show examples. 
+1. Class: Start DevLog 4-3, continue in-class/at home. 
+</CustomAside>
+
+
+<details>
+<summary>Notes</summary>
+
+1. JSON files 
+    1. Export data from an API and save it locally https://github.com/omundy/dig345-sample-server 
+1. Google Sheets
+    1. https://github.com/jsoma/tabletop
+    1. https://github.com/xinemata/leafy used to build https://tinytools.directory/
+1. MySQL
+1. MongoDB
+
+</details>
+
+
+
+
+
+
+
+## 4-2 MongoDB
+
+<CustomAside type="homework" reference="(before class)">
+
+- ✅ Continue working on DevLog 4-3
+- Read 📚 Module 10.3 in Chapter 10 of *Critical Web Design*.
+
+</CustomAside>
+
+
+
+
+## 4-3 MongoDB
+
+<CustomAside type="homework" reference="(before class)">
+
+- ✅ Continue working on DevLog 4-3
+
+</CustomAside>
+
+<div class="box-callout">
 
 ### DevLog 4-3 
 
@@ -28,6 +101,8 @@ Use Node.js and MongoDB Atlas to create the back end for Big Feelings. Then publ
 1. Add routes to get data from MongoDB (CWD 10.4)
 1. Allow Visitors to Submit Feelings (CWD 10.4) 
 1. Add an environment variable and deploy your project on Vercel. (CWD 10.4) 
-1. Read 📚 [ICE Is Going on a Surveillance Shopping Spree](https://www.eff.org/deeplinks/2026/01/ice-going-surveillance-shopping-spree), EFF 2026. Post a reading response in your DevLog per information in the [Assignments](./#assignments).
-1. Write a reflection explaining what you did learned in your DevLog. Link to sources.
+1. Read 📚 [ICE Is Going on a Surveillance Shopping Spree](https://www.eff.org/deeplinks/2026/01/ice-going-surveillance-shopping-spree), EFF 2026. Post a reading response in your DevLog per information in the [Assignments](./#assignments). ✏️
+1. Write a reflection explaining what you did learned in your DevLog. Link to sources. ✏️
 1. Publish it on Vercel and turn it in by posting the direct link to this DevLog on Moodle
+
+</div>
